--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,107 @@
-albucore==0.0.12
-albumentations==1.4.10
+albucore==0.0.24
+albumentations==2.0.8
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
-asttokens==2.4.1
-certifi==2024.6.2
+asttokens==3.0.0
+certifi==2025.6.15
 chardet==5.2.0
-charset-normalizer==3.3.2
+charset-normalizer==3.4.2
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
-contourpy==1.2.1
+contourpy==1.3.2
 cycler==0.12.1
-debugpy==1.8.2
-decorator==5.1.1
-einops==0.8.0
-executing==2.0.1
-filelock==3.15.4
-flatbuffers==24.3.25
-fonttools==4.53.0
-fsspec==2024.6.0
-huggingface-hub==0.23.4
+debugpy==1.8.14
+decorator==5.2.1
+einops==0.8.1
+einx==0.3.0
+executing==2.2.0
+filelock==3.18.0
+flatbuffers==25.2.10
+fonttools==4.58.4
+frozendict==2.4.6
+fsspec==2025.5.1
+huggingface-hub==0.33.1
 humanfriendly==10.0
-idna==3.7
-imageio==2.34.2
-intel-openmp==2021.4.0
+idna==3.10
+imageio==2.37.0
+intel-cmplr-lib-ur==2025.2.0
+intel-openmp==2025.2.0
 ipykernel==6.29.5
-ipython==8.26.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jsonpickle==4.0.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kiwisolver==1.4.5
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.1
+jsonpickle==4.1.1
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+kiwisolver==1.4.8
 lazy_loader==0.4
-MarkupSafe==2.1.5
-matplotlib==3.9.0
+loguru==0.7.3
+MarkupSafe==3.0.2
+matplotlib==3.10.3
 matplotlib-inline==0.1.7
-mkl==2021.4.0
-more-itertools==10.5.0
+mkl==2025.2.0
+more-itertools==10.7.0
 mpmath==1.3.0
-music21==9.3.0
+music21==9.7.1
 nest-asyncio==1.6.0
-networkx==3.3
+networkx==3.5
 numpy==1.26.4
 omegaconf==2.3.0
 onnxruntime==1.18.0
 onnxruntime-gpu==1.18.0
-opencv-python==4.10.0.84
-packaging==24.1
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+packaging==25.0
 parso==0.8.4
 pdf2image==1.17.0
-pillow==10.3.0
-platformdirs==4.2.2
-prompt_toolkit==3.0.47
-protobuf==5.27.1
-psutil==6.0.0
-pure-eval==0.2.2
-pydantic==2.7.4
-pydantic_core==2.18.4
-Pygments==2.18.0
-pyparsing==3.1.2
-pyreadline3==3.4.1
+pillow==11.3.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+protobuf==6.31.1
+psutil==7.0.0
+pure_eval==0.2.3
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
+pyparsing==3.2.3
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
-pywin32==306
-PyYAML==6.0.1
-pyzmq==26.0.3
-regex==2024.5.15
-requests==2.32.3
-safetensors==0.4.3
-scikit-image==0.24.0
-scikit-learn==1.5.0
-scipy==1.13.1
-six==1.16.0
+pywin32==310
+PyYAML==6.0.2
+pyzmq==27.0.0
+regex==2024.11.6
+requests==2.32.4
+safetensors==0.5.3
+scikit-image==0.25.2
+scikit-learn==1.7.0
+scipy==1.16.0
+simsimd==6.4.9
+six==1.17.0
 stack-data==0.6.3
-sympy==1.12.1
-tbb==2021.13.0
-threadpoolctl==3.5.0
-tifffile==2024.6.18
-timm==1.0.7
-tokenizers==0.19.1
-tomli==2.0.1
-torch==2.3.1+cu121
-torchaudio==2.3.1+cu121
-torchvision==0.18.1
-tornado==6.4.1
-tqdm==4.66.4
+stringzilla==3.12.5
+sympy==1.14.0
+tbb==2022.2.0
+tcmlib==1.4.0
+threadpoolctl==3.6.0
+tifffile==2025.6.11
+timm==1.0.16
+tokenizers==0.21.2
+tomli==2.2.1
+torch==2.7.1
+torchaudio==2.7.1
+torchvision==0.22.1
+tornado==6.5.1
+tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.41.2
-typing_extensions==4.12.1
-urllib3==2.2.2
+transformers==4.53.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+umf==0.11.0
+urllib3==2.5.0
 wcwidth==0.2.13
 webcolors==24.11.1
-x-transformers==1.30.23
+win32_setctime==1.2.0
+x-transformers==2.4.0
